# sweeper-des

app_server/: CMakeLists.txt  package.xml
app_server/include/: app_server.h
app_server/launch/: app_client.launch  app_server.launch
app_server/scripts/: client_app.py  conv_WGS84.py  server_app.py  test.py
app_server/src/: main.cpp
calibration/radar_to_lidar/: CMakeLists.txt  package.xml
calibration/radar_to_lidar/launch/: raddar_to_lidar.launch
calibration/radar_to_lidar/src/: radar_to_lidar.cpp
common/: log.h  (+10 more)
navigation/control/: CMakeLists.txt  package.xml
navigation/control/include/controll/: controll.h  pid.h  ultrasonic.h
navigation/control/launch/: sweeper_control.launch
navigation/control/src/: controll.cpp  main.cpp  pid.cpp  ultrasonic.cpp
navigation/localization/calibration/calib_lidar_to_gps_imu/: CMakeLists.txt  package.xml
navigation/localization/calibration/calibration_exterior_parameter/: CMakeLists.txt  package.xml
navigation/localization/loam_livox/: CMakeLists.txt
navigation/localization/loam_livox/include/: Kalman.h
navigation/localization/loam_livox/launch/: calibration.launch  calibration_gps_imu.launch  get_feature.launch  lidar_odom.launch  livox_intensity_mapping.launch  livox_localization.launch  livox_mapping.launch  mapping.launch  rosbag_largescale.launch
navigation/localization/loam_livox/src/: calibration_odom.cpp  ceres_icp.hpp  get_feature.cpp  gnss_matcher.hpp  lidar_odom.cpp  livox_intensity_mapping.cpp  new_get_feature.hpp  new_laser_mapping.cpp  plane_line_icp.hpp  point_cloud_matcher.hpp  test.cpp
navigation/localization/mapping/: CMakeLists.txt  package.xml
navigation/localization/mapping/config/: mapping_localization.yaml
navigation/localization/mapping/launch/: calib.launch  mapping.launch  matcher.launch
navigation/localization/sweeper_odom/: CMakeLists.txt  package.xml
navigation/localization/sweeper_odom/launch/: fusion_imu_sweeper.launch  get_lidar_odom.launch  gps_to_map.launch  pub_gps_imu_sweeper.launch
navigation/localization/sweeper_odom/src/: fusion_gps_imu.cpp  fusion_imu_sweeper_odom.cpp  get_lidar_odom.cpp  gps_to_map.cpp  imu_sweeper_fusion.cpp  lidar_odom.cpp  receive_gps_imu.cpp  test_imu_tran90.cpp
navigation/localization/sweeper_pose_ekf/: CMakeLists.txt  package.xml
navigation/localization/sweeper_pose_ekf/include/: ekf_localizer.hpp
navigation/localization/sweeper_pose_ekf/launch/: sweeper_pose_ekf_based_lidar.launch
navigation/localization/sweeper_pose_ekf/src/: base_lidar.cpp  ekf_localizer.cpp  sweeper_pose_ekf_based_lidar.cpp
navigation/planning/: CMakeLists.txt  package.xml
navigation/planning/include/: bspline.h  double_circle_method.h  planning.h  road_edge_detect.h
navigation/planning/include/tracker/: base_tracker.h  hungarian_bigraph_matcher.h  object.h  tracker.h  tracker_object.h
navigation/planning/launch/: planner.launch
navigation/planning/scripts/: test.py
navigation/planning/src/: bspline.cpp  double_circle_method.cpp  main.cpp  planning.cpp  road_edge_detect.cpp
navigation/planning/src/tracker/: hungarian_bigragh_matcher.cpp  tracker.cpp
sensor/gnss/: CMakeLists.txt  package.xml
sensor/gnss/include/: gnss.h
sensor/gnss/src/: gnss.cpp  main.cpp
sensor/lidar/pavo_ros/: CMakeLists.txt  package.xml  readme
sensor/lidar/pavo_ros/launch/: pavo_scan_left.launch  pavo_scan_right.launch
sensor/lidar/pavo_ros/src/: pavo_scan_node.cpp
sensor/lidar/pavo_ros/urdf/: CMakeLists.txt  package.xml
sensor/lidar/radar_fusion/: CMakeLists.txt  package.xml
sensor/lidar/radar_fusion/launch/: radar_fusion.launch
sensor/lidar/radar_fusion/src/: main.cpp
sensor/v2x/: CMakeLists.txt  package.xml
sensor/v2x/include/: v2x.h
sensor/v2x/launch/: v2x.launch
sensor/v2x/src/: main.cpp  v2x.cpp
sweeper/: CMakeLists.txt  main.cpp  package.xml
sweeper/config/: default_config.txt  trim_accuracy_config.txt
sweeper/include/common/: byte.h  data_center.h  rtGetInf.h  rtGetNaN.h  rt_nonfinite.h  rtwtypes.h
sweeper/include/navigation/: find_global_path.h
sweeper/include/nodemanager/: nodemanager.h
sweeper/include/protocol/: brake_60.h  brake_61.h  protocol_data.h  sensor_fault_76.h  steering_64.h  steering_65.h  throttle_62.h  throttle_63.h  type.h  vehicle_control_66.h  vehicle_control_67.h  vehicle_fault_71.h  vehicle_mode_68.h  vehicle_mode_69.h  vehicle_status_70.h  vehicle_status_72.h  voice_prompts_2AA.h
sweeper/include/states/: charging_state.h  curb_sweep_state.h  global_sweep_state.h  gnss_trace_state.h  idle_state.h  init_state.h  lidar_trace_state.h  record_gnss_line_state.h  record_lidar_line_state.h  sweeper_states.h  update_state.h
sweeper/include/sweeper/: sweeper.h
sweeper/launch/: app_server.launch  fusion_gps_imu.launch  gnss.launch  livox_lidar.launch  mapping.launch  matcher.launch  pavo_scan.launch  planner.launch  radar_fusion.launch  sweeper.launch  sweeper_control.launch  sweeper_pose_ekf_based_lidar.launch
sweeper/src/matlab/chassiscontrol/: SweeperDriveChassisControl.h  SweeperDriveChassisControl_private.h  SweeperDriveChassisControl_types.h
sweeper/src/matlab/faultmanager/: SweeperFaultManageMode.h  SweeperFaultManageMode_private.h  SweeperFaultManageMode_types.h
sweeper/src/matlab/gpsrecordline/: gps_record_line_model.h  gps_record_line_model_private.h  gps_record_line_model_types.h
sweeper/src/matlab/modecontrol/: SweeperDriveModeControl.h  SweeperDriveModeControl_private.h  SweeperDriveModeControl_types.h
sweeper/src/matlab/nodemanager/: SweeperNodeManageMode.h  SweeperNodeManageMode_private.h  SweeperNodeManageMode_types.h
sweeper/src/matlab/sensormanager/: SweeperSensorManageMode.h  SweeperSensorManageMode_private.h  SweeperSensorManageMode_types.h
sweeper/src/matlab/voicemanager/: SweeperVoiceManager.h  (+2 more)
sweeper_msg/: CMakeLists.txt  package.xml
sweeper_msg/msg/: Light.msg  Object.msg  Obu.msg  PerceptionObstacle.msg  Point.msg  RadarFormation.msg  RadarObject.msg  SensorFaultInformation.msg  StateReport.msg  SweepMission.msg  SweeperChassisDetail.msg  SweeperCmd.msg  SweeperUltraCmd.msg
(+227 files in other folders)
